components/conf/ticket.module.css
.hero {
  font-size: 52px;
  line-height: 1;
  letter-spacing: -0.08em;
  font-weight: 700;
  margin: 0;
  text-align: center;
}

@media (min-width: 768px) {
  .hero {
    font-size: 100px;
    font-weight: 800;
  }
}

.description {
  font-size: 20px;
  line-height: 1.4;
  color: var(--secondary-color);
  text-align: center;
  margin: 30px auto;
  max-width: 350px;
}

@media (min-width: 768px) {
  .description {
    font-size: 24px;
    max-width: 415px;
  }
}

.ticket-text {
  margin-bottom: 30px;
}

.ticket-layout {
  display: grid;
  grid-template-columns: 1fr;
  gap: 50px;
}

.ticket-visual {
  width: 330px;
  margin: 0 auto;
}

@media (min-width: 768px) {
  .ticket-visual {
    width: 650px;
  }
}

.ticket-actions {
  margin-top: 30px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

@media (min-width: 768px) {
  .ticket-actions {
    flex-direction: row;
  }
}

.ticket-actions-placeholder {
  height: 75px;
}

@media (min-width: 1200px) {
  .ticket-layout {
    grid-template-columns: 1fr 1fr;
  }
  .hero {
    font-size: 64px;
    text-align: left;
  }
  .description {
    text-align: left;
    margin: 30px 0;
  }
}

.ticket-visual-wrapper {
  width: 100%;
}

